-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b56
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8027500 | 8 | Roland Westrelin | P3 | Resolved | Fixed | b114 |
| JDK-8187162 | openjdk7u | Roland Westrelin | P3 | Resolved | Fixed | master |
Having replace_in_map() operate on parent maps increase the chance that a type check benefits in the rest of the method.
- backported by
-
JDK-8027500 replace_in_map() should operate on parent maps
-
- Resolved
-
-
JDK-8187162 replace_in_map() should operate on parent maps
-
- Resolved
-
- relates to
-
JDK-8026796 Make replace_in_map() on parent maps generic
-
- Resolved
-