8024069: replace_in_map() should operate on parent maps

Type information gets lost because replace_in_map() doesn't update parent maps

Reviewed-by: kvn, twisti